# playwright-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  NOTICE  README.md
.github/workflows/: ci.yml  rust.yml
scripts/: Cargo.toml  Makefile  driver_commit.sh  types.json
scripts/src/: api.rs  diff.rs  gen.rs  generate_api.rs  generate_protocol.rs  lib.rs  protocol.rs  utils.rs
scripts/src/api/: types.rs
src/: api.rs  build.rs  core.rs  driver.rs  gen.rs  imp.rs  lib.rs  main.rs
src/api/: 1.9.1-1614225150000.json  accessibility.rs  api.json  browser.rs  browser_context.rs  browser_type.rs  cdp_session.rs  console_message.rs  dialog.rs  download.rs  element_handle.rs  file_chooser.rs  frame.rs  generated.rs  input_device.rs  js_handle.rs  page.rs  playwright.rs  request.rs  response.rs  route.rs  selectors.rs  utils.rs  video.rs  websocket.rs  worker.rs
src/imp/: artifact.rs  binding_call.rs  browser.rs  browser_context.rs  browser_type.rs  cdp_session.rs  connection.rs  console_manager.rs  console_message.rs  dialog.rs  download.rs  driver.rs  element_handle.rs  file_hooser.rs  frame.rs  js_handle.rs  message.rs  network.rs  page.rs  playwright.rs  remote_object.rs  request.rs  response.rs  route.rs  selectors.rs  stream.rs  transport.rs  utils.rs  video.rs  websocket.rs  worker.rs
src/imp/core/: connection.rs  driver.rs  event_emitter.rs  message.rs  remote_object.rs  transport.rs
src/imp/core/message/: de.rs  ser.rs
src/protocol/: generated.rs
tests/: hello.rs  test.rs
tests/browser/: mod.rs
tests/browser_context/: mod.rs
tests/browser_type/: mod.rs
tests/connect/: mod.rs
tests/devices/: mod.rs
tests/page/: mod.rs
tests/selectors/: mod.rs
tests/server/: form.html  worker.html
