[package]
name = "playwright"
version = "0.0.10"
authors = ["octaltree <octaltree@gmail.com>"]
description = "Playwright port to Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/playwright/"
repository = "https://github.com/octaltree/playwright-rust"
categories = ["web-programming"]
keywords = ["testing", "headless", "web", "browser", "automation"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }

[dependencies]
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
zip = "0.5.11"
thiserror = "1.0.24"
strong = { version = "0.3.4", features = ["serde", "shorthand"] }
tokio = { version = "1.4.0", features = ["sync", "rt-multi-thread", "macros"] }
actix-rt = { version = "2.2.0", optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }
dirs = "3.0.1"
paste = "1.0.5"
base64 = "0.13.0"
itertools = "0.10.0"
chrono = { version = "0.4.19", optional = true, features = ["serde"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }
futures = "0.3.14"

[dev-dependencies]
env_logger = "0.8.3"

[features]
default = ["chrono", "rt-tokio"]
rt-tokio = []
rt-actix = ["actix-rt"]
rt-async-std = ["async-std"]
only-for-docs-rs = []

[package.metadata.docs.rs]
features = ["only-for-docs-rs"]
