[package]
name = "playwright"
version = "0.0.20"
authors = ["octaltree <octaltree@gmail.com>"]
description = "Playwright port to Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/playwright/"
repository = "https://github.com/octaltree/playwright-rust"
categories = ["web-programming"]
keywords = ["testing", "headless", "web", "browser", "automation"]
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }

[dependencies]
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.66"
zip = "0.6.4"
thiserror = "1.0.26"
strong = { version = "0.3.4", features = ["serde", "shorthand"] }
tokio = { version = "1.9.0", features = ["sync", "rt-multi-thread", "macros"] }
actix-rt = { version = "2.2.0", optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }
dirs = "5.0.0"
paste = "1.0.5"
base64 = "0.21.0"
itertools = "0.10.1"
chrono = { version = "0.4.19", optional = true, features = ["serde"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
futures = "0.3.16"
serde_with = { version = "2.3.2", default-features = false, features = ["macros"] }
parking_lot = "0.12.1"

[dev-dependencies]
env_logger = "0.10.0"
tempdir = "0.3.7"
tide = "0.16.0"
warp = "0.3.1"

[features]
default = ["chrono", "rt-tokio"]
rt-tokio = []
rt-actix = ["actix-rt"]
rt-async-std = ["async-std"]
only-for-docs-rs = []

[package.metadata.docs.rs]
features = ["only-for-docs-rs"]
