[package]
name = "scripts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
case = "1.0.0"
proc-macro2 = "1.0.26"
quote = "1.0.9"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[[bin]]
name = "gen"
path = "src/gen.rs"
