[package]
name = "scripts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
case = "1.0.0"
itertools = "0.10.3"
proc-macro2 = "1.0.27"
quote = "1.0.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9.2"

[[bin]]
name = "generate_api"
path = "src/generate_api.rs"

[[bin]]
name = "generate_protocol"
path = "src/generate_protocol.rs"

[[bin]]
name = "diff"
path = "src/diff.rs"
